* Change css opacity to display to avoid invisible clicking div
* Change css opacity to display to avoid invisible clicking div

--- a/voip_sip_webrtc/static/src/css/notification.css
+++ b/voip_sip_webrtc/static/src/css/notification.css
@@ -7,7 +7,7 @@
     left:10px;
     resize: both;
     padding:5px;
-    opacity:0;
+    display:none;
     border: black 1px solid;
     overflow: hidden;
     background-color: #EEEEEE;
@@ -22,7 +22,7 @@
     bottom:10px;
     right:10px;
     resize: both;
-    opacity:0;
+    display:none;
     border: black 1px solid;
     overflow: hidden;
     background-color: #EEEEEE;
